Removed custom ordering of PCA ellipses (may be needed again?)

--- a/R/REPORT_GENERATOR.Rmd
+++ b/R/REPORT_GENERATOR.Rmd
@@ -388,7 +388,7 @@ plot_function <- function(target) {
 }
 
 fig <- plot_ly()
-lapply(unique(PCA_DATA[[2]])[3:2], plot_function)
+lapply(unique(PCA_DATA[[2]]), plot_function)
 fig
 ```
 
